# taskwarrior-valore

./: LICENSE  README.md  assess_value.py  pyproject.toml  valore.toml
tests/: test_assess_value.py
