[project]
name = "taskwarrior-valore"
version = "0.1.0"
description = "Standalone Taskwarrior value and priority assessment utility"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "questionary>=2.0",
    "rich>=13.7",
]

[project.scripts]
task-valore = "assess_value:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
